<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">My Music Player</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_player">Player</string>
    <string name="action_search">Search</string>
    <string name="action_view_as_list">File List</string>
    <string name="string_initial_time">00:00:00</string>
    <string name="title_activity_music_player">Player</string>
    <string name="title_activity_music_list">Music File List</string>
    <string name="title_activity_music_preference">Preference</string>
    <string name="player_title">Title</string>
    <string name="player_playpause">Play / Pause</string>
    <string name="player_stop">Stop</string>
    <string name="player_fast_forward">Fast Forward</string>
    <string name="player_rewind">Rewind</string>
    <string name="player_replay">Replay</string>
    <string name="listitem_title">Title</string>
    <string name="listitem_artist">Artist</string>
    <string name="listitem_id">Id</string>
    <string name="listitem_duration">Duration</string>
    <string name="listitem_button_to_player">Button to PlayerActivity</string>

</resources>