<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:layout_margin="3dp"
    android:baselineAligned="false"
    android:orientation="horizontal" >

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_gravity="left"
        android:layout_margin="1sp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:weightSum="3" >

        <TextView
            android:id="@+id/listitem_textview_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="left|top"
            android:layout_weight="1"
            android:lines="2"
            android:maxLines="2"
            android:text="@string/listitem_title"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/listitem_textview_artist"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom|left"
            android:layout_weight="2"
            android:lines="1"
            android:maxLines="1"
            android:text="@string/listitem_artist" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="60dp"
        android:layout_height="match_parent"
        android:layout_gravity="right"
        android:layout_margin="1sp"
        android:orientation="vertical"
        android:weightSum="3" >

        <TextView
            android:id="@+id/listitem_textview_id"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="right|top"
            android:layout_weight="1"
            android:text="@string/listitem_id" />

        <TextView
            android:id="@+id/listitem_textview_duration"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom|right"
            android:layout_weight="2"
            android:text="@string/listitem_duration" />
    </LinearLayout>

</LinearLayout>